--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   syncfusion_flutter_charts: ^20.4.38
   mqtt_client: ^9.7.4
+  provide: ^1.0.2
+  provider: ^6.0.5
   
 
 dev_dependencies:
